[package]
name = "tweet"
description = "See your tweets directly from terminal"
homepage = "https://github.com/igormandello/tweet"
documentation = "https://github.com/igormandello/tweet"
repository = "https://github.com/igormandello/tweet"
keywords = ["twitter", "tweet", "cli", "terminal"]
categories = ["command-line-interface", "command-line-utilities"]
version = "0.0.1"
authors = ["Igor Mandello <igormandello@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tui = { version = "0.16.0", features = ["termion"], default-features = false }
termion = "1.5.6"
